# lldc-reflection

./: MIT  README.md  meson.build  meson_options.txt
include/: meson.build
include/lldc-reflection/: api.h  declaration.h  registration.h
include/lldc-reflection/converters/: json-glib.h  socket-io.h
include/lldc-reflection/exceptions/: exceptions.h  meson.build
include/lldc-reflection/metadata/: metadata.h
include/lldc-rttr/: api.h  declaration.h  meson.build  registration.h
include/lldc-rttr/converters/: json-glib.h  meson.build  socket-io.h
include/lldc-rttr/exceptions/: exceptions.h
include/lldc-rttr/metadata/: meson.build  metadata.h
src/: associative-containers.cpp  meson.build
src/converters/: meson.build
src/converters/json-glib/: from-json-glib.cpp  meson.build  to-json-glib.cpp
src/converters/socket-io/: from-socket-io.cpp  meson.build  to-socket-io.cpp
src/metadata/: meson.build  metadata.cpp
src/private/: associative-containers.h
src/private/metadata/: metadata.h
src/private/type/: type.h
src/type/: meson.build  type.cpp
subprojects/: .gitignore  json-glib-1.0.wrap  rttr.wrap  sioclient.wrap
subprojects/packagefiles/rttr/: 0001-patch-for-min-max-macros-in-Windows.h.patch
subprojects/packagefiles/sioclient/: meson.build
tests/: meson.build
tests/common/: meson.build
tests/common/common/: api.h  common.h  example_messages.h  meson.build
tests/common/src/: example_messages.cpp
tests/test-template/: meson.build  test-template.cpp
tutorial/: Tutorial.md  meson.build
tutorial/doc/: 01-a-basic-structure.md  02-getters-setters-and-friends.md  03-handling-objects.md  04-having-some-subclass.md  05-optional-data-members.md  06-how-to-use-blob.md
tutorial/lib/: meson.build
tutorial/lib/include/: meson.build  tutorial.hpp
tutorial/lib/src/: meson.build  tutorial.cpp
tutorial/tests/: meson.build
tutorial/tests/include/: meson.build
tutorial/tests/src/: meson.build  tutorial-test.cpp
